cmake_minimum_required(VERSION 3.0.0)
project(lp)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0 -g -Wall -std=c++11")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2 -Wall -std=c++11 -DNDEBUG")
include(FindPkgConfig)
find_package(Threads)
include_directories("src")
set(sources src/file.cpp src/hash.cpp src/lexer.cpp src/logging.cpp src/main.cpp src/os.cpp src/parser.cpp src/sha1.cpp src/siphash.c
            src/compile.cpp src/module.cpp src/u8.cpp src/intern.cpp)
add_executable(lp ${sources})
target_link_libraries(lp m ${CMAKE_THREAD_LIBS_INIT})
